<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.ScheduleFragment">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/margin_radiogroup"
        android:weightSum="1"
        android:id="@+id/result_radioGroup">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_search_by_league"
            android:id="@+id/radioButtonLeague"
            android:checked="true"
            android:textColor="@android:color/black"
            android:layout_weight="0.5"
            android:textSize="@dimen/radio_tsize_radioB"
            android:padding="@dimen/radio_padding_radioB" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_search_by_team"
            android:id="@+id/radioButtonTeam"
            android:checked="false"
            android:padding="@dimen/radio_padding_radioB"
            android:textColor="@android:color/black"
            android:layout_weight="0.5"
            android:textSize="@dimen/radio_tsize_radioB" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/result_margin_ll"
        android:weightSum="1">
        <android.support.v7.widget.SearchView
            android:id="@+id/result_searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:defaultQueryHint="Search Team"
            app:iconifiedByDefault="false"
            app:searchIcon="@null"
            android:layout_weight="0.3"/>
        <Button
            android:id="@+id/result_searchBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:textColor="@android:color/white"
            android:background="@color/colorListBtnClick"
            android:text="@string/schedule_search"/>
    </LinearLayout>

    <TextView
        android:id="@+id/result_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/result_tsize_title"
        android:padding="@dimen/result_padding_title"
        android:textStyle="bold"
        android:gravity="center"
        android:background="@color/colorListBtn"
        android:textColor="@android:color/black"
        android:fontFamily="@font/adam"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/result_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
</layout>