<?xml version="1.0" encoding="utf-8"?>
  <android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/allteamsinleague_cardview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="@dimen/cardview_elevation"
    app:cardCornerRadius="@dimen/cardview_cornerradius"
    android:layout_margin="@dimen/cardview_margin"
    android:padding="@dimen/cardview_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorListBtnClick">

        <ImageView
            android:id="@+id/allteamsinleague_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/allteamsinleague_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/allteams_tsize_name"
            android:padding="@dimen/allteams_padding_name"
            android:layout_gravity="center"
            android:fontFamily="@font/adam"
            android:textColor="@android:color/white"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <TextView
                    android:id="@+id/allteamsinleague_stadium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/allteams_tsize_stadium"
                    android:padding="@dimen/allteams_padding_stadium"
                    android:textColor="@android:color/holo_orange_dark"/>
                <TextView
                    android:id="@+id/allteamsinleague_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/allteams_tsize_year"
                    android:padding="@dimen/allteams_padding_year"
                    android:textColor="@android:color/holo_orange_dark"/>
            </LinearLayout>
        <LinearLayout
            android:id="@+id/allteams_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <TextView
                android:id="@+id/allteamsinleague_played"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/allteams_tsize_ll"
                android:paddingHorizontal="@dimen/allteams_paddingH_ll"
                android:textColor="@android:color/white"/>
            <TextView
                android:id="@+id/allteamsinleague_win"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/allteams_tsize_ll"
                android:paddingHorizontal="@dimen/allteams_paddingH_ll"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/allteamsinleague_loss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/allteams_tsize_ll"
                android:paddingHorizontal="@dimen/allteams_paddingH_ll"
                android:textColor="@android:color/white"/>
            <TextView
                android:id="@+id/allteamsinleague_draw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/allteams_tsize_ll"
                android:paddingHorizontal="@dimen/allteams_paddingH_ll"
                android:textColor="@android:color/white"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">
                <TextView
                    android:text="@string/allteamsinleague_played"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/allteams_tsize_ll"
                    android:padding="@dimen/allteams_padding_ll"
                    android:textColor="@android:color/holo_orange_light" />
                <TextView
                    android:text="@string/allteamsinleague_win"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/allteams_tsize_ll"
                    android:padding="@dimen/allteams_padding_ll"
                    android:textColor="@android:color/holo_orange_light"/>

                <TextView
                    android:text="@string/allteamsinleague_loss"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/allteams_tsize_ll"
                    android:padding="@dimen/allteams_padding_ll"
                    android:textColor="@android:color/holo_orange_light"/>
                <TextView
                    android:text="@string/allteamsinleague_draw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/allteams_tsize_ll"
                    android:padding="@dimen/allteams_padding_ll"
                    android:textColor="@android:color/holo_orange_light"/>

            </LinearLayout>
     </LinearLayout>

 </android.support.v7.widget.CardView>